--- a/public/css/style.css
+++ b/public/css/style.css
@@ -486,6 +486,7 @@ h1.renkli a:hover {
 }
 
 #izle #player .top .select {
+  position: relative;
   float: left;
   padding: 7px 20px;
   border: 2px solid rgba(255, 255, 255, 0.3);
@@ -499,6 +500,39 @@ h1.renkli a:hover {
 
 #izle #player .top .select:hover {
   background: rgba(255, 255, 255, 0.3);
+}
+
+#izle #player .top .select .menusu {
+  display: none;
+  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.32);
+          box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.32);
+  position: absolute;
+  background: #fff;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-left: 50px;
+}
+
+#izle #player .top .select .menusu li {
+  padding: 10px;
+  color: #222;
+  right: 0;
+  border-bottom: 1px solid #ddd;
+}
+
+#izle #player .top .select .menusu li:last-child {
+  border: none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#izle #player .top .select .menusu li:first-child {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#izle #player .top .select .menusu li:hover {
+  background: #ddd;
 }
 
 #izle #player .player {
@@ -1399,5 +1433,9 @@ h1.renkli a:hover {
   #footer {
     padding: 20px;
   }
+}
+
+[v-cloak] {
+  display: none;
 }
 
