--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 $break-small: 600px;
 $break-large: 1200px;
-
+a:focus {
+    color: #fff;
+    text-decoration: none;
+}
 * {
     font-family: 'Open Sans', sans-serif;
     outline: none;
