--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);* {
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);a:focus {
+  color: #fff;
+  text-decoration: none;
+}
+
+* {
   font-family: 'Open Sans', sans-serif;
   outline: none;
   list-style: none;
