--- a/public/css/mobil.css
+++ b/public/css/mobil.css
@@ -21,6 +21,7 @@ body {
 }
 
 #header {
+  border-top: 5px solid rgba(0, 0, 0, 0.12);
   background: #422897;
   background: -webkit-gradient(left top, right top, color-stop(0%, #422897), color-stop(100%, #874eab));
   background: -webkit-gradient(linear, left top, right top, from(#422897), to(#874eab));
@@ -38,7 +39,7 @@ body {
 }
 
 #header .top .user .col {
-  padding-left: 0;
+  padding: 0;
 }
 
 #header .top .user a {
@@ -109,12 +110,15 @@ body {
 
 #content h5 {
   color: #666c98;
-  border-bottom: 3px dotted #666c98;
+  border-bottom: 3px dotted #1f254c;
   font-size: 14px;
   font-weight: bold;
   padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+#content .filmler .film {
   margin-bottom: 10px;
-  display: inline-block;
 }
 
 #content .filmler .film img {
@@ -122,12 +126,13 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.56);
           box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.56);
+  height: 218px;
 }
 
 #content .filmler .film .name {
   height: 50px;
   overflow: hidden;
-  color: #fff;
+  color: #676e9e;
   font-weight: bold;
   margin-top: 5px;
   text-align: center;
