--- a/resources/assets/sass/mobil.scss
+++ b/resources/assets/sass/mobil.scss
@@ -15,6 +15,7 @@ body {
      margin-right: 0 !important;
 }
 #header {
+    border-top: 5px solid rgba(0,0,0,.12);
     background: rgba(66,40,151,1);
     background: -moz-linear-gradient(left, rgba(66,40,151,1) 0%, rgba(135,78,171,1) 100%);
     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(66,40,151,1)), color-stop(100%, rgba(135,78,171,1)));
@@ -31,7 +32,7 @@ body {
         }
         .user {
             .col {
-                padding-left: 0;
+                padding:0;
             }
             a {
                 padding: 0; color:#fff; font-weight: bold;
@@ -77,21 +78,22 @@ body {
     padding: 20px;
     h5 {
         color:#666c98;
-        border-bottom: 3px dotted #666c98;
+        border-bottom: 3px dotted #1f254c;
         font-size: 14px; font-weight: bold;
-        padding-bottom: 10px; margin-bottom: 10px;
-        display: inline-block;
+        padding-bottom: 10px; margin-bottom: 20px;
     }
 
     .filmler {
         .film {
+            margin-bottom: 10px;
             img {
                 width: 100%;
                 border-radius: 5px;
                 box-shadow: 3px 3px 3px rgba(0,0,0,.56);
+                height: 218px;
             }
             .name {
-                height: 50px; overflow: hidden; color:#fff;
+                height: 50px; overflow: hidden; color:#676e9e;
                 font-weight: bold;
                 margin-top: 5px;
                 text-align: center;
