--- a/public/css/mobil.css
+++ b/public/css/mobil.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 body {
@@ -18,6 +19,10 @@ body {
 
 .row {
   margin-right: 0 !important;
+}
+
+[v-cloak] {
+  display: none;
 }
 
 #header {
@@ -139,6 +144,23 @@ body {
 }
 
 #content .filmler .film .name .puan {
+  color: orange;
+}
+
+.film-detay .name {
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.film-detay .detay {
+  margin-top: 10px;
+}
+
+.film-detay .detay li {
+  font-weight: bold;
+}
+
+.film-detay .detay li span {
   color: orange;
 }
 
