--- a/resources/assets/sass/mobil.scss
+++ b/resources/assets/sass/mobil.scss
@@ -1,5 +1,5 @@
 * {
-    margin:0; padding:0;
+    margin:0; padding:0; list-style: none;
 }
 body {
     color:#fff;
@@ -13,6 +13,9 @@ body {
 }
 .row {
      margin-right: 0 !important;
+}
+[v-cloak] {
+    display: none;
 }
 #header {
     border-top: 5px solid rgba(0,0,0,.12);
@@ -100,6 +103,22 @@ body {
                 .puan {
                     color: orange;
                 }
+            }
+        }
+    }
+}
+
+.film-detay {
+    .name {
+        font-weight: bold; font-size: 17px;
+    }
+
+    .detay {
+        margin-top: 10px;
+        li {
+            font-weight: bold;
+            span {
+                color: orange;
             }
         }
     }
