--- a/resources/assets/sass/mobil.scss
+++ b/resources/assets/sass/mobil.scss
@@ -56,6 +56,9 @@ body {
             margin-left: 20px;
             background: transparent; color:#fff; border: none;
             padding-left: 0;
+            &:focus {
+                box-shadow: none;
+            }
         }
         .input-group {
             margin-bottom: 0 !important;
@@ -120,6 +123,103 @@ body {
             span {
                 color: orange;
             }
+        }
+    }
+}
+.yorumlar {
+    margin-top: 20px;
+    
+}
+.konu {
+    color: #666c98;
+    margin-top: 10px; margin-bottom: 15px;
+}
+.secenekler {
+    text-align: center;
+    i {
+        color: orange;
+    }
+    font-weight: bold;
+}
+.yorum_list {
+    ul {
+        margin-top: 20px;
+
+        li {
+            margin-bottom: 10px; padding-bottom: 10px;
+            border-bottom: 1px solid rgba(255, 255, 255,.05);
+            .left {
+                
+                img {
+                    width: 50px; height: 50px; border-radius: 50px;
+                    border: 2px solid rgba(255, 255, 255, .4);
+                }
+            }
+
+            .right {
+
+                .top {
+                    margin-bottom: 15px;
+                    .name {
+                        font-weight: bold; color:orange; float:left; margin-right: 10px;
+                    }
+                    .tarih {
+                        color:#ccc;
+                    }
+                }
+
+                p {
+                    color:#65709a;
+                }
+            }
+        }
+    }
+}
+
+.popMenu {
+    position: absolute; left:0; right:0; z-index: 99999;
+    display: none;
+    li {
+        background: #6546A6;
+        a {
+            color:#fff;
+            i {
+                color:orange;
+            }
+        }
+    }
+}
+
+.sayfalama {
+    margin-bottom: 50px;
+    ul li {
+        float: left; margin-right: 10px; margin-bottom: 10px;
+        a {
+            display: inline-block; 
+            border-radius: 3px; background: #1e2346;
+            font-weight: 600; color:#fff; padding: 3px 0px;
+            text-align: center; width: 30px;
+
+            &.aktif {
+                background: #fa3556;
+            }
+        }
+    }
+}
+
+
+.arsiv_acilir {
+    display: none;
+    position: absolute; z-index: 9999;
+    left:20px; right:20px;
+    li {
+        background: #6546A6;
+        a {
+            color:#fff;
+            i {
+                color: orange;
+            }
+            font-weight: bold;
         }
     }
 }
